# nemesis

./: Cargo.toml  README.md
src/: lib.rs
src/bulletproofs/: helpers.rs  lib.rs  mod.rs  prover.rs  system.rs  test.rs  traits.rs  verifier.rs  verifier_challenger.rs
src/fri/: merkle_tree.rs  mod.rs  protocol.rs  prover.rs  roots_of_unity.rs  utils.rs  verifier.rs
src/kzg/: mod.rs  prover.rs  system.rs  test.rs  verifier.rs
src/util/: mod.rs
